# HHdata

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MaxDemandCalculator.spec  README.md  pyproject.toml
.github/workflows/: python-ci.yml
deploy/cloudrun/: service.yaml
deploy/docker/: .dockerignore
deploy/kubernetes/: deployment.yaml
dev/archive_max_demand_calculator_legacy/: a_loader.py  b_transformer.py  c_season.py
dev/src/max_demand_calculator/: d_calculator.py
dev/src/max_demand_calculator_streamlit/: e_app.py  requirements.txt
dev/src/max_demand_calculator_streamlit/.streamlit/: config.toml
src/max_demand_calculator/: run.py
tests/: test_placeholder.py
